--- a/templates/default.html
+++ b/templates/default.html
@@ -18,12 +18,7 @@
             <ul class="nav navbar-nav">
                 <li role="presentation"><a href="/">Home</a></li>
                 <li role="presentation"><a href="/about.html">About</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projects and Series <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">Coming soon</a></li>
-                    </ul>
-                </li>
+                <li role="presentation"><a href="/projects.html">Projects and Series</a></li>
                 <li role="presentation"><a href="/talks.html">Talks</a></li>
                 <li role="presentation"><a href="/archive.html">Archive</a></li>
             </ul>
