--- a/templates/default.html
+++ b/templates/default.html
@@ -16,11 +16,11 @@
                 <a href="/">Dave Laing</a>
             </div>
             <ul class="nav navbar-nav">
-                <li role="presentation"><a href="/">Home</a></li>
-                <li role="presentation"><a href="/about.html">About</a></li>
-                <li role="presentation"><a href="/projects.html">Projects and Series</a></li>
-                <li role="presentation"><a href="/talks.html">Talks</a></li>
-                <li role="presentation"><a href="/archive.html">Archive</a></li>
+                <li role="presentation" $if(home-active)$ class="active" $endif$ ><a href="/">Home</a></li>
+                <li role="presentation" $if(about-active)$ class="active" $endif$ ><a href="/about.html">About</a></li>
+                <li role="presentation" $if(projects-active)$ class="active" $endif$ ><a href="/projects.html">Projects and Series</a></li>
+                <li role="presentation" $if(talks-active)$ class="active" $endif$ ><a href="/talks.html">Talks</a></li>
+                <li role="presentation" $if(archive-active)$ class="active" $endif$ ><a href="/archive.html">Archive</a></li>
             </ul>
         </div>
 
