Updates talk template

--- a/templates/talk.html
+++ b/templates/talk.html
@@ -10,7 +10,7 @@ $endif$
 
         <p>
 $if(video-link)$
-        <a href="$video-link$">Vimeo link</a>
+        <a href="$video-link$">Video link</a>
 $endif$
 
 $if(slides-link)$
