--- a/templates/default.html
+++ b/templates/default.html
@@ -48,6 +48,7 @@
 
   ga('create', 'UA-59162164-1', 'auto');
   ga('send', 'pageview');
+  ga('set', 'anonymizeIp', true);
 </script>
 
     </body>
